      API users will need to perform a push or pull or update operation if they
      require branch synchronisation to take place. (Robert Collins, #47344)

    * When creating a tarball or zipfile export, export unicode names as utf-8
      paths. This may not work perfectly on all platforms, but has the best
      chance of working in the common case. (John Arbash Meinel, #56816)

  PORTABILITY:

    * Fixes to run on Python 2.5 (Brian M. Carlson, Martin Pool, Marien Zwart)

  INTERNALS:

    * TestCaseInTempDir now creates a separate directory for HOME, rather
      than having HOME set to the same location as the working directory.
      (John Arbash Meinel)

    * run_bzr_subprocess() can take an optional 'env_changes={}' parameter,
      which will update os.environ inside the spawned child. It also can
      take a 'universal_newlines=True', which helps when checking the output
      of the command. (John Arbash Meinel)

    * Refactor SFTP vendors to allow easier re-use when ssh is used. 
      (Andrew Bennetts)

    * Transport.list_dir() and Transport.iter_files_recursive() should always
      return urlescaped paths. This is now tested (there were bugs in a few
      of the transports) (Andrew Bennetts, David Allouche, John Arbash Meinel)

    * New utility function symbol_versioning.deprecation_string. Returns the
      formatted string for a callable, deprecation format pair. (Robert Collins)

    * New TestCase helper applyDeprecated. This allows you to call a callable
      which is deprecated without it spewing to the screen, just by supplying
      the deprecation format string issued for it. (Robert Collins)

    * Transport.append and Transport.put have been deprecated in favor of
      .append_bytes, .append_file, .put_bytes, and .put_file. This removes the
      ambiguity in what type of object the functions take.
      Transport.non_atomic_put_{bytes,file} has also been added. Which works