@@ -84,6 +84,9 @@ IN DEVELOPMENT
       paths. This may not work perfectly on all platforms, but has the best
       chance of working in the common case. (John Arbash Meinel, #56816)
 
+    * When committing, only files that exist in working tree or basis tree
+      may be specified (Aaron Bentley, #50793)
+
   PORTABILITY:
 
     * Fixes to run on Python 2.5 (Brian M. Carlson, Martin Pool, Marien Zwart)
